# Task-paralegal

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Extarct/: AutherExtraction.py  BranchExtract.py  SectionDetection.py  pdfReader.py  textNormalizer.py
output_json/: sample-judgment-1.json  sample-judgment-2.json  sample-judgment-3.json  sample-judgment-4.json
