[project]
name = "task-paralegal"
version = "0.1.0"
description = "A legal document extraction system for parsing and analyzing PDF judgments"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"


dependencies = [
    # PDF Processing
    "pdfplumber==0.11.9",
    "pdfminer.six==20251230",
    "PyMuPDF==1.27.2.2",
    "pdf2image==1.17.0",
    "pypdfium2==5.6.0",
    
    # OCR
    "pytesseract==0.3.13",
    
    # NLP
    "spacy==3.8.14",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    # Note: en_core_web_sm must be installed separately via: python -m spacy download en_core_web_sm
    
    # Image Processing
    "Pillow==12.2.0",
    
    # Data Processing
    "numpy==2.4.4",
    "regex==2026.3.32",
    "tqdm==4.67.3",
    
    # HTTP
    "requests==2.33.1",
    "httpx==0.28.1",
    
    # CLI & Configuration
    "click==8.3.1",
    "typer==0.24.1",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    
    # Data Validation
    "pydantic==2.12.5",
    "pydantic_core==2.41.5",
    "annotated-types==0.7.0",
    "annotated-doc==0.0.4",
    
    # Utilities
    "certifi==2026.2.25",
    "charset-normalizer==3.4.6",
    "cryptography==46.0.6",
    "cloudpathlib==0.23.0",
    "smart_open==7.5.1",
    "rich==14.3.3",
]

[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["Extarct"]

[dependency-groups]
dev = [
    "ipython==9.12.0",
    "jupyter==1.0.0",
]
